fixed icon alignment

--- a/src/styles/photodetails.scss
+++ b/src/styles/photodetails.scss
@@ -11,10 +11,8 @@
   background: rgb(245, 245, 245);
 }
 
-.photo_breadcrumb {
-  .icon {
-    vertical-align: middle;
-  }
+.icon {
+  vertical-align: middle;
 }
 
 .photo_image-ctr {
